--- a/src/containers/Product/EditProduct.css
+++ b/src/containers/Product/EditProduct.css
@@ -10,6 +10,10 @@
     text-align: center;
     font-weight: 500;
 }
+.edit-product__form p{
+    text-align: center;
+    font-weight: 250;
+}
 
 @media (min-width: 768px) {
     .edit-product__form {
